--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -34,3 +34,10 @@
         </div>
     </div>
 </footer>
+<div class="widgets">
+    <a href="" class="widgets__item icon-calculator"></a>
+    <span class="widgets__separator"></span>
+    <a href="" class="widgets__item icon-telegram-fill"></a>
+    <span class="widgets__separator"></span>
+    <a href="" class="widgets__item icon-whatsapp-fill"></a>
+</div>
