--- a/src/service.html
+++ b/src/service.html
@@ -210,6 +210,34 @@
                         </form>
                     </div>
                 </section>
+                <section class="layout">
+                    <div class="layout__container">
+                        <div class="layout__title title-xl" data-animate="bottom">Какую квартиру вы хотите отремонтировать?</div>
+                        <ul class="layout__list">
+                            <li class="layout__item">
+                                <div class="layout__item-caption">1-комнатная/студия</div>
+                                <div class="layout__item-picture">
+                                    <img src="@img/layout/01.svg" alt="Планировка">
+                                </div>
+                                <a href="" class="layout__item-btn btn btn-primary-outline btn-fullwidth">Узнать подробнее</a>
+                            </li>
+                            <li class="layout__item">
+                                <div class="layout__item-caption">2-комнатная</div>
+                                <div class="layout__item-picture">
+                                    <img src="@img/layout/02.svg" alt="Планировка">
+                                </div>
+                                <a href="" class="layout__item-btn btn btn-primary-outline btn-fullwidth">Узнать подробнее</a>
+                            </li>
+                            <li class="layout__item">
+                                <div class="layout__item-caption">3-комнатная</div>
+                                <div class="layout__item-picture">
+                                    <img src="@img/layout/03.svg" alt="Планировка">
+                                </div>
+                                <a href="" class="layout__item-btn btn btn-primary-outline btn-fullwidth">Узнать подробнее</a>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
                 <section class="examples">
                     <div class="examples__container">
                         <div class="examples__title title-xl" data-animate="bottom">Примеры работ</div>
@@ -275,6 +303,34 @@
                                 <div class="deadlines__item-caption">3-к<span>омнатная</span> квартира</div>
                                 <div class="deadlines__item-value">40 рабочих дней</div>
                                 <div class="deadlines__item-desc">с момента получения разрешения</div>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="deadlines">
+                    <div class="deadlines__container">
+                        <h2 class="deadlines__title title-xl" data-animate="bottom">
+                            Сроки выполнения
+                        </h2>
+                        <ul class="deadlines__list deadlines__list-lg" data-animate="bottom">
+                            <li class="deadlines__item">
+                                <div class="deadlines__item-column">
+                                    <div class="deadlines__item-caption">Ремонт 1-к<span>омнатной</span> квартиры</div>
+                                    <div class="deadlines__item-value">30 рабочих дней</div>
+                                    <div class="deadlines__item-desc">с момента получения разрешения</div>
+                                </div>
+                                <div class="deadlines__item-image">
+                                    <img src="@img/icons/repair.svg" alt="icon">
+                                </div>
+                            </li>
+                            <li class="deadlines__item">
+                                <div class="deadlines__item-column">
+                                    <div class="deadlines__item-caption">Меблировка</div>
+                                    <div class="deadlines__item-value">7 рабочих дней</div>
+                                </div>
+                                <div class="deadlines__item-image">
+                                    <img src="@img/icons/furnishings.svg" alt="icon">
+                                </div>
                             </li>
                         </ul>
                     </div>
@@ -590,6 +646,148 @@
                                 </div>
                             </form>
                         </div>
+                    </div>
+                </section>
+                <section class="repair-cases">
+                    <div class="repair-cases__container">
+                        <div class="repair-cases__title title-xl" data-animate="bottom">Выполненные ремонты однокомнатных квартир</div>
+                        <ul class="repair-cases__list">
+                            <li class="repair-cases__item" data-animate="bottom">
+                                <div class="repair-cases__item-image">
+                                    <img src="@img/repair-cases/01.jpg" class="cover-image" alt="Пример">
+                                </div>
+                                <div class="repair-cases__item-body">
+                                    <div class="repair-cases__item-name">1-комнатная, 29 м<sup>2</sup></div>
+                                    <div class="repair-cases__item-location icon-location">The Bay Apartments</div>
+                                    <ul class="repair-cases__item-list">
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Тип ремонта:</div>
+                                            <div class="repair-cases__item-value">Full Renovation</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Срок ремонта:</div>
+                                            <div class="repair-cases__item-value">3 месяца</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Стоимость ремонта:</div>
+                                            <div class="repair-cases__item-value">118,000 AED</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="repair-cases__item" data-animate="bottom">
+                                <div class="repair-cases__item-image">
+                                    <img src="@img/repair-cases/02.jpg" class="cover-image" alt="Пример">
+                                </div>
+                                <div class="repair-cases__item-body">
+                                    <div class="repair-cases__item-name">Студия, 34 м<sup>2</sup></div>
+                                    <div class="repair-cases__item-location icon-location">Mamsha Al Saadiyat</div>
+                                    <ul class="repair-cases__item-list">
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Тип ремонта:</div>
+                                            <div class="repair-cases__item-value">Full Renovation</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Срок ремонта:</div>
+                                            <div class="repair-cases__item-value">3 месяца</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="repair-cases__item" data-animate="bottom">
+                                <div class="repair-cases__item-image">
+                                    <img src="@img/repair-cases/03.jpg" class="cover-image" alt="Пример">
+                                </div>
+                                <div class="repair-cases__item-body">
+                                    <div class="repair-cases__item-name">1-комнатная, 48 м<sup>2</sup></div>
+                                    <div class="repair-cases__item-location icon-location">Business Bay</div>
+                                    <ul class="repair-cases__item-list">
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Тип ремонта:</div>
+                                            <div class="repair-cases__item-value">Full Renovation</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Срок ремонта:</div>
+                                            <div class="repair-cases__item-value">3 месяца</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Стоимость ремонта:</div>
+                                            <div class="repair-cases__item-value">118,000 AED</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="repair-cases__item" data-animate="bottom">
+                                <div class="repair-cases__item-image">
+                                    <img src="@img/repair-cases/04.jpg" class="cover-image" alt="Пример">
+                                </div>
+                                <div class="repair-cases__item-body">
+                                    <div class="repair-cases__item-name">1-комнатная, 18 м<sup>2</sup></div>
+                                    <div class="repair-cases__item-location icon-location">Palm Jumeirah</div>
+                                    <ul class="repair-cases__item-list">
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Тип ремонта:</div>
+                                            <div class="repair-cases__item-value">Full Renovation</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Срок ремонта:</div>
+                                            <div class="repair-cases__item-value">3 месяца</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Стоимость ремонта:</div>
+                                            <div class="repair-cases__item-value">118,000 AED</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="repair-cases__item" data-animate="bottom">
+                                <div class="repair-cases__item-image">
+                                    <img src="@img/repair-cases/05.jpg" class="cover-image" alt="Пример">
+                                </div>
+                                <div class="repair-cases__item-body">
+                                    <div class="repair-cases__item-name">1-комнатная, 29 м<sup>2</sup></div>
+                                    <div class="repair-cases__item-location icon-location">Mamsha Al Saadiyat</div>
+                                    <ul class="repair-cases__item-list">
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Тип ремонта:</div>
+                                            <div class="repair-cases__item-value">Full Renovation</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Срок ремонта:</div>
+                                            <div class="repair-cases__item-value">3 месяца</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Стоимость ремонта:</div>
+                                            <div class="repair-cases__item-value">118,000 AED</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="repair-cases__item" data-animate="bottom">
+                                <div class="repair-cases__item-image">
+                                    <img src="@img/repair-cases/06.jpg" class="cover-image" alt="Пример">
+                                </div>
+                                <div class="repair-cases__item-body">
+                                    <div class="repair-cases__item-name">1-комнатная, 43 м<sup>2</sup></div>
+                                    <div class="repair-cases__item-location icon-location">Abu Dhabi Etihad Towers</div>
+                                    <ul class="repair-cases__item-list">
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Тип ремонта:</div>
+                                            <div class="repair-cases__item-value">Full Renovation</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Срок ремонта:</div>
+                                            <div class="repair-cases__item-value">3 месяца</div>
+                                        </li>
+                                        <li class="repair-cases__item-block">
+                                            <div class="repair-cases__item-property">Стоимость ремонта:</div>
+                                            <div class="repair-cases__item-value">118,000 AED</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                        <button type="button" class="repair-cases__btn btn btn-primary icon-plus">Смотреть все проекты</button>
                     </div>
                 </section>
                 <section class="team">
