--- a/TopSuites/privacy-policy.html
+++ b/TopSuites/privacy-policy.html
@@ -45,13 +45,13 @@
   <!-- Twitter -->
 
   <!-- plugins -->
-  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241219215239" />
-  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241219215239" />
-  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241219215239" />
+  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20250123170219" />
+  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20250123170219" />
+  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20250123170219" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="css/reset.min.css?_v=20241219215239" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20241219215239" />
+  <link rel="stylesheet" href="css/reset.min.css?_v=20250123170219" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20250123170219" />
 
 </head>
 
@@ -585,6 +585,13 @@
         </div>
       </div>
     </footer>
+    <div class="widgets">
+      <a href="" class="widgets__item icon-calculator"></a>
+      <span class="widgets__separator"></span>
+      <a href="" class="widgets__item icon-telegram-fill"></a>
+      <span class="widgets__separator"></span>
+      <a href="" class="widgets__item icon-whatsapp-fill"></a>
+    </div>
   </div>
   <div id="modal" class="popup">
     <div class="popup__body" data-form-body>
@@ -627,12 +634,12 @@
     </div>
   </div>
   <!-- plugins -->
-  <script src="js/libs/swiper-bundle.min.js?_v=20241219215239"></script>
-  <script src="js/libs/fancybox.min.js?_v=20241219215239"></script>
-  <script src="js/libs/nouislider.min.js?_v=20241219215239"></script>
+  <script src="js/libs/swiper-bundle.min.js?_v=20250123170219"></script>
+  <script src="js/libs/fancybox.min.js?_v=20250123170219"></script>
+  <script src="js/libs/nouislider.min.js?_v=20250123170219"></script>
   <!-- plugins -->
 
-  <script src="js/app.min.js?_v=20241219215239"></script>
+  <script src="js/app.min.js?_v=20250123170219"></script>
 </body>
 
 </html>
